--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
      <div class="card col-md-2 scrollFade "  onclick = "go('yash_yaswanth13')">
        <center><img src="https://www.prestachamps.com/images/about/img1.png" alt="" class="card-img-top" style="height:200px; width: 200px; border-radius: 100%; margin:25px"></center>
        <div class="card-body">
-         <h5 class="card-title">Designing & Developed By</h5>
+         <h5 class="card-title">Designing & Architecture By</h5>
          <p>@yash_yaswanth13</p>
        </div>
      </div>
