--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <div class="flip-card-inner">
         <div class="flip-card-front card">
           <img src="https://www.prestachamps.com/images/about/img1.png" alt="" class="card-img-top" style="height:160px; width: 170px; border-radius: 50%; margin:5px">
-          <h5 class="card-title" style="font-size: 130%; font-weight: 400; padding-top: 7.5%;">Designing & Developed By</h5>
+          <h5 class="card-title" style="font-size: 130%; font-weight: 400; padding-top: 7.5%;">Designing & Architecture By</h5>
         </div>
         <div class="flip-card-back card">
             <img src="https://i.ibb.co/g9yxSq5/Whats-App-Image-2022-08-15-at-6-47-44-PM.jpg" alt="" class="card-img-top" style="height:170px; width: 170px; border-radius: 50%; margin:5px">
